html phone update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">    
 </head>
 <body>
+<div id="body">
     <img src="profile/images/bg-pattern-top.svg" id="top">
     <div id="container">
         <div id="banner">
@@ -38,5 +39,6 @@
         </div>
     </div>
     <img src="profile/images/bg-pattern-bottom.svg" id="bottom">
+</div>
 </body>
 </html>
